samples/_failures_safe/1761291872_6aed8c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b16029f9.c: In function ‘main’:
./samples/SAFE/__tmp_b16029f9.c:149:34: error: expected ‘)’ at end of input
  149 |         buffer_free(&decompressed
      |                    ~             ^
      |                                  )
./samples/SAFE/__tmp_b16029f9.c:149:9: error: expected declaration or statement at end of input
  149 |         buffer_free(&decompressed
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_b16029f9.c:149:9: error: expected declaration or statement at end of input
